--- a/views/main.ejs
+++ b/views/main.ejs
@@ -70,12 +70,12 @@
       <!-- <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-39138383960" class="ui button">Register</a> -->
     </div>
     <div class="ui center aligned text container">
-      <a class="item" id="about" >About</a>
-      <a class="item" id="agenda">Agenda</a>
-      <a class="item" id="speakers">Speakers</a>
-      <a class="item" id="partners">Partners</a>
-      <a class="item" id="pricing">Pricing</a>
-      <a class="item" id="venue">Details</a>
+      <a class="item" id="about" href="#about">About</a>
+      <a class="item" id="agenda" href="#agenda">Agenda</a>
+      <a class="item" id="speakers" href="#speakers">Speakers</a>
+      <a class="item" id="partners" href="#partners">Partners</a>
+      <a class="item" id="pricing" href="#pricing">Pricing</a>
+      <a class="item" id="venue" href="#venue">Details</a>
       <a class="item" id="contact">Contact</a>
     </div>
     <div class="right item">
@@ -99,7 +99,7 @@
     </div>
   </div>
 
-  <div class="ui vertical about-section center aligned segment">
+  <div class="ui vertical about-section center aligned segment" id="about">
     <div class="ui text header container">
       <h1 class="ui header" id="eventDate">Feb 23rd - 24th 2019</h1>
       <h1 class="ui header" id="eventVenue">NUS, Singapore</h1>
@@ -112,7 +112,7 @@
     </div>
   </div>
 
-    <div class="ui vertical agenda-section center aligned segment">
+    <div class="ui vertical agenda-section center aligned segment" id="agenda">
       <div class="ui text header container">
         <h1 class="ui header">Agenda for 2019</h1>
       </div>
@@ -227,7 +227,7 @@
       </div>
     </div>
 
-  <div class="ui vertical speakers-section center aligned segment">
+  <div class="ui vertical speakers-section center aligned segment" id="speakers">
     <div class="ui text header container">
       <h1 class="ui header">Speakers for 2018</h1>
     </div>
@@ -378,7 +378,7 @@
   </div>
 
 
-  <div class="ui vertical partners-section center aligned segment">
+  <div class="ui vertical partners-section center aligned segment" id="partners">
     <div class="ui text header container">
       <h1 class="ui header">Key Partners for 2018</h1>
     </div>
@@ -481,7 +481,7 @@
 
 
 
-  <div class="ui vertical pricing-section center aligned segment">
+  <div class="ui vertical pricing-section center aligned segment" id="pricing">
 
     <div class="ui text header container">
       <h1 class="ui header">Pricing</h1>
@@ -520,7 +520,7 @@
 
   </div>
 
-  <div class="ui vertical venue-section segment">
+  <div class="ui vertical venue-section segment" id="venue">
 
     <div class="ui middle aligned grid">
       <div class="row">
