--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130791774-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-130791774-1');
+  </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,27 +20,21 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
   <!-- Facebook Pixel Code -->
   <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '692242714308461');
-    fbq('track', 'PageView');
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+          n.queue=[];t=b.createElement(e);t.async=!0;
+          t.src=v;s=b.getElementsByTagName(e)[0];
+          s.parentNode.insertBefore(t,s)}(window, document,'script',
+          'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '748463218657549');
+      fbq('track', 'PageView');
   </script>
-  <script>
-    fbq('track', 'CompleteRegistration');
-  </script>
-
   <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=692242714308461&ev=PageView&noscript=1"
+                 src="https://www.facebook.com/tr?id=748463218657549&ev=PageView&noscript=1"
     /></noscript>
-    <!-- End Facebook Pixel Code -->
-
-
+  <!-- End Facebook Pixel Code -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="dist/semantic.min.js"></script>
     <script src="scripts/transition.js"></script>
@@ -54,7 +56,7 @@
       </video> -->
       <img class="ui image" id="gif" src="/speakers_images/bangg.gif">
       <img class="ui image" id="logo" src="/speakers_images/uniconLogoBig.png">
-      <h1 id="first">Join us for Asia's</h1>
+      <h1 id="first">Creating the unicon of tomorrow</h1>
       <!-- <h1 id="fisrt">Asia's Craziest Collegiate Entrepreneurship Conference</h1> -->
       <h1 id="second">CRAZIEST</h1>
       <h1 id="third">Student Conference on Tech and Entrepreneurship</h1>
