--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -1,23 +1,3 @@
-
-/*@font-face  {
-    font-family: 'Graphik';
-    src:url('/fonts/Graphik-Medium.otf');
-}*/
-
-/*html,body {
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: auto;
-}*/
-
-/** {
-    background: #000 !important;
-    color: #0f0 !important;
-    outline: solid #f00 1px !important;
-}*/
-
 .ui.button {
   background-color: rgb(48, 207, 208);
   color: white;
@@ -65,9 +45,6 @@
 
 .ui.secondary.inverted.menu {
   background-color: rgb(45, 61, 133);
-  /*background-color: rgb(51, 51, 86);*/
-  /*background-color: rgb(46, 61, 137);*/
-  /*background-color: rgb(48, 207, 208);*/
 }
 
 .header-section.segment {
@@ -143,16 +120,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: 22px;
-  /*color: rgb(48, 207, 208);*/
 }
-
-/*.header-section.segment .container h2 {
-  margin-top: 5%;
-  z-index: 2;
-  position: relative;
-  font-weight: 600;
-  font-size: 23px;
-}*/
 
 .main.secondary.menu {
   z-index: 1;
@@ -285,55 +253,32 @@
 .speakers-section.segment .detail.container .column  h3 {
   z-index: 1;
   position: absolute;
+  bottom: 2%;
 }
 
-
-.speakers-section.segment .detail.container .column  #janil {
-  text-align: left;
-}
-
-.speakers-section.segment .detail.container .column  #pankaj {
-  color: white;
-  bottom: 28%;
+.speakers-section.segment .detail.container .column  .info {
+  color: lightgrey;
+  font-weight: 600;
   margin-left: 5%;
   text-align: left;
+  padding-right: 1em;
 }
 
-.speakers-section.segment .detail.container .column  .name {
+.speakers-section.segment .detail.container .column  .info .name {
   font-size: 25px;
   color: white;
-  bottom: 20%;
-  margin-left: 5%;
-  text-align: left;
+  margin-bottom: -0.75em;
 }
-.speakers-section.segment .detail.container .column  .title {
-  color: lightgrey;
-  font-weight: 600;
-  bottom: 11%;
-  margin-left: 5%;
-  text-align: left;
-}
-.speakers-section.segment .detail.container .column  .company {
-  color: lightgrey;
-  font-weight: 600;
-  bottom: 3%;
-  margin-left: 5%;
-  text-align: left;
-}
-
 
 .partners-section.segment {
   width: 100%;
   margin: 0;
-  /*height: 850px;*/
-  /*top: 30%;*/
   padding: 3em;
 }
 
 .partners-section.segment .header.container {
   margin: 0;
   position: relative;
-  /*top: 150px;*/
 }
 
 .partners-section.segment .description.container {
@@ -351,24 +296,6 @@
   position: relative;
   margin-top: 3em;
 }
-
-/*.partners-section.segment .secondary.description.container {
-  margin: 0;
-  position: relative;
-  margin-top: 4em;
-}
-
-.partners-section.segment .primary.detail.container .column  {
-  position: relative;
-  padding: 5%;
-}
-
-.partners-section.segment .primary.detail.container .column img {
-  position: relative;
-  height: 4em;
-  margin-left: auto;
-  margin-right: auto;
-}*/
 
 .partners-section.segment .secondary.description.container {
   margin: 0;
@@ -819,35 +746,6 @@
     padding-right: 10px;
   }
 
-  /*.header-section.segment .container #logo {
-    height: 150px;
-    z-index: 2;
-    position: relative;
-    margin-bottom: 50px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .header-section.segment .container #gif {
-    z-index: 1;
-    position: absolute;
-    height: 300px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .header-section.segment .container h1 {
-    margin-top: 5%;
-    font-weight: 700;
-    font-size: 25px;
-  }
-
-  .header-section.segment .container h2 {
-    margin-top: 5%;
-    font-weight: 600;
-    font-size: 23px;
-  }*/
-
   .header-section.segment .container #date {
     margin-top: 5%;
     font-weight: 600;
@@ -929,41 +827,6 @@
     padding-right: 10px;
   }
 
-  /*.header-section.segment .container #logo {
-    height: 100px;
-    z-index: 2;
-    position: relative;
-    margin-bottom: 50px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .header-section.segment .container #gif {
-    z-index: 1;
-    position: absolute;
-    height: 300px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .header-section.segment .container h1 {
-    margin-top: 5%;
-    font-weight: 700;
-    font-size: 23px;
-  }
-
-  .header-section.segment .container h2 {
-    margin-top: 5%;
-    font-weight: 600;
-    font-size: 21px;
-  }
-
-  .header-section.segment .container #date {
-    margin-top: 5%;
-    font-weight: 600;
-    font-size: 21px;
-    color: rgb(48, 207, 208);
-  }*/
 
   .header-section.segment .container {
     position: relative;
@@ -1030,6 +893,13 @@
     margin-right: auto;
     padding-top: 22px;
   }
+
+  .agenda-section.segment .content .column .card {
+    position: relative;
+    width: 100%;
+    height: 87%;
+    vertical-align: middle;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -1045,27 +915,24 @@
     height: 100%;
     padding: 0px;
   }
-  .speakers-section.segment .detail.container .column  .name {
+
+  .speakers-section.segment .detail.container .column  .info {
+    font-size: 12px;
+    color: lightgrey;
+    font-weight: 600;
+    margin-left: 5%;
+    text-align: left;
+  }
+
+  .speakers-section.segment .detail.container .column  .info .name {
     font-size: 17px;
     color: white;
-    bottom: 20%;
-    margin-left: 5%;
-    text-align: left;
+    margin-left: 0.3%;
+    margin-bottom: -0.75em;
   }
-  .speakers-section.segment .detail.container .column  .title {
-    font-size: 12px;
-    color: lightgrey;
-    font-weight: 600;
-    bottom: 10%;
-    margin-left: 5%;
-    text-align: left;
-  }
-  .speakers-section.segment .detail.container .column  .company {
-    font-size: 12px;
-    color: lightgrey;
-    font-weight: 600;
-    bottom: 0;
-    margin-left: 5%;
+
+  .speakers-section.segment .detail.container .column #no_warp{
+    white-space: nowrap;
   }
 
   .speakers-section.segment .detail.container .column  i {
@@ -1076,6 +943,8 @@
     font-size: 1.5em;
     color: white;
   }
+
+
 
 }
 
@@ -1232,51 +1101,23 @@
     padding: 4px;
   }
 
-  .speakers-section.segment .detail.container .column  .name {
-    font-size: 18px;
-    color: white;
-    bottom: 20%;
-    margin-left: 5%;
-    text-align: left;
-  }
-
-  .speakers-section.segment .detail.container .column #janil {
-    font-size: 18px;
-    color: white;
-    margin-left: 5%;
-    text-align: left;
-  }
-
-  .speakers-section.segment .detail.container .column #dione {
-    font-size: 18px;
-    color: white;
-    bottom: 30%;
-    margin-left: 5%;
-    text-align: left;
-  }
-
-  .speakers-section.segment .detail.container .column #jacopo {
-    font-size: 18px;
-    color: white;
-    bottom: 30%;
-    margin-left: 5%;
-    text-align: left;
-  }
-
-  .speakers-section.segment .detail.container .column  .title {
+  .speakers-section.segment .detail.container .column  .info {
     font-size: 13px;
     color: lightgrey;
     font-weight: 600;
-    bottom: 10%;
     margin-left: 5%;
     text-align: left;
   }
-  .speakers-section.segment .detail.container .column  .company {
-    font-size: 13px;
-    color: lightgrey;
-    font-weight: 600;
-    bottom: 0;
-    margin-left: 5%;
+
+  .speakers-section.segment .detail.container .column  .info .name {
+    font-size: 18px;
+    color: white;
+    margin-left: 0.3%;
+    margin-bottom: -0.75em;
+  }
+
+  .speakers-section.segment .detail.container .column #no_warp{
+    white-space: nowrap;
   }
 
   .speakers-section.segment .detail.container .column  i {
@@ -1432,14 +1273,6 @@
   .footer.segment .grid #social .container i {
     font-size: 25px;
     font-weight: 200;
-  }
-
-  .speakers-section.segment .detail.container .column  #pankaj {
-    bottom: 30%;
-  }
-
-  .speakers-section.segment .detail.container .column  #jacopo {
-    bottom: 30%;
   }
 
   .agenda-section.segment .content {
